--- a/formulario.html
+++ b/formulario.html
@@ -2,25 +2,17 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="f.css">
 <meta charset="utf-8">
-<title>El patito feo</title>
+<meta name="viewport" content="width=device-width,user-scaleble=no,initial-scale=1,maximun-scale=1,minimun-scale=1">
+<title></title>
 </head>
 <body>
-<form action="">
-	<p>Nombre:</p>
-	<input type="text" class="field"> <br/>
-
-	<p>Correo electrónico:</p>
-	<input type="text" class="field"> <br/>
-
-	<p>Asunto:</p>
-	<input type="text" class="field"> <br/>
-
-	<p>Mensaje:</p>
-	<textarea class="field"></textarea> <br/>
-
-	<p class="center-content">
-		<input type="submit" class="btn btn-green" value="Enviar Datos">
-	</p>
+<form action="recibir.php" method="POST"
+>
+Nombre: <input type="text" name="nombre"><br>
+Apellido:<input type="text" name="apellido"><br>
+Correo: <input type="text" name="email"><br>
+Mensaje: <input type="text" name="mensaje"><br>
+<input type="submit" name="enviar" value="Enviar">
 
 </form>
 </body>
